2010-11-10	The InnoDB Team

	* srv/srv0start.c:
	Fix Bug #48026 Log start and end of InnoDB buffer pool
	initialization to the error log

2010-11-03	The InnoDB Team

	* include/btr0btr.h, include/btr0btr.ic, dict/dict0crea.c:
	Fix Bug#57947 InnoDB diagnostics shows btr_block_get calls
	instead of real callers

2010-11-03	The InnoDB Team

	* fil/fil0fil.c, fsp/fsp0fsp.c, handler/ha_innodb.cc,
	include/fil0fil.h, include/univ.i:
	Fix Bug #54538 - use of exclusive innodb dictionary lock limits
	performance.

2010-11-02	The InnoDB Team

	* btr/btr0cur.c, dict/dict0dict.c, dict/dict0load.c,
	handler/ha_innodb.cc, include/dict0dict.h, row/row0mysql.c,
	innodb_bug53046.result, innodb_bug53046.test:
	Fix Bug#53046 dict_update_statistics_low can still be run
	concurrently on same table

2010-11-02	The InnoDB Team

	* row/row0sel.c:
	Fix Bug#57799 READ UNCOMMITTED access failure of off-page
	DYNAMIC or COMPRESSED columns again

2010-10-24	The InnoDB Team

	* row/row0mysql.c
	Fix Bug#57700 Latching order violation in
	row_truncate_table_for_mysql()

2010-10-20	The InnoDB Team

	* dict/dict0load.c
	Fix Bug#57616 Sig 11 in dict_load_table() when failed to load
	index or foreign key

2010-10-19	The InnoDB Team

	* btr/btr0cur.c, buf/buf0buf.c, buf/buf0flu.c, handler/ha_innodb.cc,
	ibuf/ibuf0ibuf.c, include/btr0cur.h, include/buf0flu.h,
	include/ibuf0ibuf.h, include/row0mysql.h,
	row/row0mysql.c, row/row0sel.c,
	innodb_bug56680.test, innodb_bug56680.result:
	Fix Bug#56680 InnoDB may return wrong results from a
	case-insensitive covering index

2010-10-18	The InnoDB Team

	* handler/ha_innodb.cc, handler/ha_innodb.h, innodb_bug57252.result,
	innodb_bug57252.test:
	Fix Bug#57252 disabling innobase_stats_on_metadata disables ANALYZE

2010-10-14	The InnoDB Team

	* handler/ha_innodb.cc, innodb_bug56143.result, innodb_bug56143.test:
	Fix Bug#56143 too many foreign keys causes output of show create
	table to become invalid

2010-10-14	The InnoDB Team

	* srv/srv0start.c: